# Diyabet-tahmini-PIMA

./: .gitignore  README.md  pyproject.toml  requirements.txt
betikler/: degerlendirmeyi_calistir.py  pima_1000_1000_artifact_üret.py  resmi_skor_tablosu_uret.py  veri_artirmadan_optimizasyon.py
dokumanlar/: api_sozlesmesi.md  canli_demo_akisi.md  degisim_kaydi.md  proje_kapsami.md  prova_kontrol_listesi.md  resmi_skor_tablosu.md  risk_kaydi.md  soru_cevap_kartlari.md  sunum_iskeleti.md  test_senaryolari.md  veri_artirmadan_optimizasyon_raporu.md
makine_ogrenmesi/artifactler/: artifact_uretimi_ozeti.json  esik_yapilandirmasi.json  model_metadata.json
makine_ogrenmesi/artifactler_backup_20260406_083631/: en_iyi_pipeline.joblib  esik_yapilandirmasi.json  kalibrator.joblib  metrik_ozeti.json  model_metadata.json
makine_ogrenmesi/kaynak/: esik_analizi.py  model_degerlendirme.py  model_egitimi.py  on_isleme.py  pima_özellik_dönüşümleri.py
makine_ogrenmesi/notebooklar/: 01_veri_kesfi.ipynb  02_on_isleme.ipynb  03_modelleme.ipynb  04_kalibrasyon_ve_esik.ipynb  05_shap_analizi.ipynb
makine_ogrenmesi/raporlar/degerlendirme/: model_degerlendirme_ozeti.json  nihai_model_degerlendirme_ozeti.json  resmi_skor_tablosu.json  (+1 more)
testler/: test_api.py  test_dogrulama.py  test_risk_mantigi.py  test_tahmin.py
uygulama/: main.py
uygulama/api/rotalar/: sayfalar.py
uygulama/sablonlar/: ana_sayfa.html  base.html
uygulama/semalar/: cikti_semalari.py  dogrulamalar.py  girdi_semalari.py
uygulama/servisler/: aciklama_servisi.py  risk_servisi.py  shap_servisi.py  tahmin_servisi.py
(+7 files in other folders)
