[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diyabet-risk-tahmini"
version = "0.1.0"
description = "Kadin bireylerde diyabet risk tahmini projesi"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["testler"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
  "makine_ogrenmesi/notebooklar",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
exclude = [
  "makine_ogrenmesi/notebooklar",
]
